--- a/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_chofer.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_chofer.xml
@@ -90,6 +90,7 @@
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:hint="@string/contrase_aChofer"
+                android:maxLength="8"
                 android:inputType="textWebPassword"
                 tools:ignore="RtlHardcoded" />
 
