--- a/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_asistente.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_asistente.xml
@@ -77,6 +77,7 @@
                 android:fontFamily="sans-serif"
                 android:hint="@string/contrase_aChofer"
                 android:inputType="textWebPassword"
+                android:maxLength="8"
                 android:layout_below="@+id/usuario_generadoA"
                 android:layout_alignStart="@+id/usuario_generadoA" />
 
