--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_pasajero.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_pasajero.xml
@@ -84,6 +84,7 @@
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="@string/contrase_aChofer"
+        android:maxLength="8"
         android:inputType="textWebPassword"
         android:layout_below="@+id/longitud_lugar_destino"
         android:layout_alignStart="@+id/longitud_lugar_destino" />
