--- a/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_chofer.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_chofer.xml
@@ -74,7 +74,8 @@
                 android:ems="10"
                 android:hint="@string/n_mero_de_empleado"
                 android:inputType="number"
-                tools:ignore="RtlHardcoded" />
+                tools:ignore="RtlHardcoded"
+                android:maxLength="5"/>
 
             <EditText
                 android:id="@+id/contrasenaChofer"
