--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_logout.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_logout.xml
@@ -11,10 +11,10 @@
         android:id="@+id/logoutButton"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:background="@drawable/button_style"
-        android:textColor="#ffff"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:background="@drawable/button_style"
         android:text="@string/cerrar_sesi_n"
-        android:textAllCaps="false"/>
+        android:textAllCaps="false"
+        android:textColor="#ffff" />
 </RelativeLayout>
