--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_solicitud.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_solicitud.xml
@@ -84,7 +84,9 @@
                     android:layout_below="@+id/folioSolicitud"
                     android:layout_marginTop="13dp"
                     android:background="@drawable/border_style"
-                    android:ems="10" />
+                    android:ems="10"
+                    android:spinnerMode="dialog"
+                    />
 
                 <Button
                     android:id="@+id/registrarSolicitud"
@@ -127,7 +129,7 @@
                 android:layout_height="1000dp"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical"
-                android:visibility="invisible">
+                android:visibility="visible">
 
                 <ImageView
                     android:id="@+id/image"
@@ -280,7 +282,7 @@
                     android:inputType="text"
                     tools:ignore="HardcodedText" />
 
-                <EditText
+                <Spinner
                     android:id="@+id/marca_vehiculo"
                     android:layout_width="300dp"
                     android:layout_height="40dp"
@@ -288,10 +290,10 @@
                     android:layout_below="@+id/modelo_vehiculo"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/border_style"
+                    android:entries="@array/marcas_array"
                     android:ems="10"
-                    android:hint="@string/marca"
-                    android:inputType="text"
-                    tools:ignore="HardcodedText" />
+                    android:spinnerMode="dialog"
+                    android:prompt="@string/marca"/>
 
                 <!--SELECCIONAR SPINNE, DEFAULT 2017R-->
                 <Spinner
@@ -303,21 +305,20 @@
                     android:layout_marginTop="10dp"
                     android:entries="@array/years_array"
                     android:background="@drawable/spinner_style"
+                    android:spinnerMode="dialog"
                     android:prompt="@string/year_prompt" />
 
-                <EditText
+                <Spinner
                     android:id="@+id/color_vehiculo"
                     android:layout_width="145dp"
                     android:layout_height="40dp"
                     android:layout_above="@+id/numero_placas"
                     android:layout_alignEnd="@+id/marca_vehiculo"
                     android:background="@drawable/border_style"
-                    android:drawableLeft="@drawable/color_icon"
-                    android:drawablePadding="5dp"
                     android:ems="10"
-                    android:hint="Color"
-                    android:inputType="text"
-                    tools:ignore="HardcodedText,RtlHardcoded" />
+                    android:spinnerMode="dialog"
+                    android:prompt="@string/color"
+                    android:entries="@array/colores_array"/>
 
                 <EditText
                     android:id="@+id/numero_placas"
@@ -374,9 +375,9 @@
                     android:id="@+id/seleccionarEncuentro"
                     android:layout_width="300dp"
                     android:layout_height="40dp"
-                    android:layout_alignStart="@+id/textViewDA"
                     android:layout_below="@+id/textViewDE"
-                    android:layout_marginTop="15dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="14dp"
                     android:background="@drawable/tercer_button_style"
                     android:text="Seleccione el lugar de encuentro"
                     android:textAllCaps="false" />
@@ -387,7 +388,7 @@
                     android:layout_height="40dp"
                     android:layout_alignStart="@+id/selectorFecha"
                     android:layout_below="@+id/textViewDD"
-                    android:layout_marginTop="22dp"
+                    android:layout_marginTop="20dp"
                     android:background="@drawable/tercer_button_style"
                     android:text="Seleccione el lugar de destino"
                     android:textAllCaps="false" />
