--- a/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_pasajero.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_pasajero.xml
@@ -14,7 +14,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimaryText"
+            android:background="@color/colorAccent"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:titleTextColor="@android:color/background_light" />
 
