--- a/Transportaciones_CICESE/app/src/main/res/layout/updatesolicitudform.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/updatesolicitudform.xml
@@ -211,56 +211,18 @@
                     android:textSize="18sp" />
 
 
-                <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_alignStart="@+id/ima3"
-                    android:layout_alignTop="@+id/descripcion_lugar_encuentro"
-                    android:paddingTop="10dp"
-                    android:text="@string/descripci_n"
-                    android:textColor="@android:color/black" />
-
                 <EditText
                     android:id="@+id/descripcion_lugar_encuentro"
-                    android:layout_width="220dp"
+                    android:layout_width="300dp"
                     android:layout_height="40dp"
-                    android:layout_alignStart="@+id/textViewDD2"
-                    android:layout_below="@+id/textViewDD"
+                    android:layout_below="@+id/seleccionarEncuentro"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/border_style"
                     android:drawablePadding="5dp"
                     android:ems="10"
                     android:inputType="textPersonName" />
 
-
-                <EditText
-                    android:id="@+id/longitud_lugar_encuentro"
-
-                    android:layout_width="300dp"
-                    android:layout_height="40dp"
-
-                    android:layout_alignEnd="@+id/descripcion_lugar_encuentro"
-                    android:layout_below="@+id/textView12"
-                    android:layout_marginTop="11dp"
-                    android:background="@drawable/border_style"
-                    android:ems="10"
-                    android:hint="@string/longitud"
-                    android:inputType="text" />
-
-                <EditText
-                    android:id="@+id/latitud_lugar_encuentro"
-
-                    android:background="@drawable/border_style"
-                    android:layout_width="300dp"
-                    android:layout_height="40dp"
-                    android:layout_below="@+id/longitud_lugar_encuentro"
-                    android:layout_alignStart="@+id/longitud_lugar_encuentro"
-                    android:layout_marginTop="10dp"
-
-                    android:ems="10"
-                    android:hint="@string/latitud"
-                    android:inputType="text" />
 
 
                 <TextView
@@ -277,29 +239,16 @@
 
                 <EditText
                     android:id="@+id/descripcion_lugar_destino"
-                    android:layout_width="220dp"
-                    android:layout_height="40dp"
-                    android:layout_alignEnd="@+id/fecha_encuentro"
-                    android:layout_below="@+id/textViewDD2"
-                    android:background="@drawable/border_style"
-                    android:ems="10"
-                    android:inputType="text" />
-
-                <EditText
-                    android:id="@+id/longitud_lugar_destino"
-
                     android:layout_width="300dp"
                     android:layout_height="40dp"
-
-                    android:layout_alignEnd="@+id/descripcion_lugar_destino"
-                    android:layout_below="@+id/descripcion_lugar_destino"
-                    android:layout_marginTop="11dp"
+                    android:layout_alignEnd="@+id/fecha_encuentro"
+                    android:layout_below="@+id/seleccionarDestino"
+                    android:layout_marginTop="13dp"
                     android:background="@drawable/border_style"
                     android:ems="10"
-                    android:hint="@string/longitud"
                     android:inputType="text" />
 
-                <EditText
+                <!--EditText
                     android:id="@+id/latitud_lugar_destino"
                     android:background="@drawable/border_style"
                     android:layout_width="300dp"
@@ -309,13 +258,13 @@
                     android:layout_marginTop="10dp"
                     android:ems="10"
                     android:hint="@string/latitud"
-                    android:inputType="text" />
+                    android:inputType="text" /-->
 
                 <ImageButton
                     android:id="@+id/selectorHoraU"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_alignStart="@+id/longitud_lugar_encuentro"
+                    android:layout_alignEnd="@+id/textView28"
                     android:layout_alignTop="@+id/horaEncuentro"
                     app:srcCompat="@drawable/clock"
                     tools:ignore="ContentDescription" />
@@ -330,8 +279,8 @@
                     android:hint="@string/hora"
                     android:clickable="true"
                     android:focusable="false"
-                    android:layout_below="@+id/latitud_lugar_encuentro"
-                    android:layout_alignEnd="@+id/latitud_lugar_encuentro" />
+                    android:layout_below="@+id/descripcion_lugar_encuentro"
+                    android:layout_alignEnd="@+id/descripcion_lugar_encuentro" />
 
                 <ImageButton
                     android:id="@+id/selectorFechaU"
@@ -363,23 +312,21 @@
                     android:textColor="@android:color/darker_gray"
                     android:textSize="18sp"
                     android:layout_marginTop="20dp"
-                    android:layout_below="@+id/latitud_lugar_destino"
+                    android:layout_below="@+id/descripcion_lugar_destino"
                     android:layout_centerHorizontal="true" />
 
-
-                <EditText
+                <AutoCompleteTextView
                     android:id="@+id/modelo_vehiculo"
-                    android:layout_width="300dp"
+                    android:layout_width="220dp"
                     android:layout_height="40dp"
-                    android:layout_alignEnd="@+id/latitud_lugar_destino"
-                    android:layout_alignStart="@+id/descripcion_lugar_destino"
+                    android:layout_alignStart="@+id/textViewDD2"
                     android:layout_below="@+id/textViewDD3"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="14dp"
                     android:background="@drawable/border_style"
                     android:ems="10"
                     android:inputType="text" />
 
-                <EditText
+                <AutoCompleteTextView
                     android:id="@+id/marca_vehiculo"
                     android:layout_width="300dp"
                     android:layout_height="40dp"
@@ -391,7 +338,7 @@
                     android:ems="10"
                     android:inputType="text" />
 
-                <EditText
+                <AutoCompleteTextView
                     android:id="@+id/anio_vehiculo"
                     android:layout_width="300dp"
                     android:layout_height="40dp"
@@ -403,7 +350,7 @@
                     android:ems="10"
                     android:inputType="number" />
 
-                <EditText
+                <AutoCompleteTextView
                     android:id="@+id/color_vehiculo"
                     android:layout_width="300dp"
                     android:layout_height="40dp"
@@ -488,24 +435,14 @@
                 </RelativeLayout>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_alignBaseline="@+id/descripcion_lugar_destino"
-                    android:layout_alignBottom="@+id/descripcion_lugar_destino"
-                    android:layout_alignStart="@+id/longitud_lugar_destino"
-                    android:paddingTop="10dp"
-                    android:text="@string/descripci_n"
-                    android:textColor="@android:color/black" />
-
-                <TextView
                     android:id="@+id/textView28"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_alignStart="@+id/selectorFechaU"
+                    android:layout_alignStart="@+id/textView29"
                     android:layout_alignTop="@+id/modelo_vehiculo"
+                    android:paddingTop="10dp"
                     android:text="@string/model"
-                    android:textColor="@android:color/black"
-                    />
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/textView29"
@@ -513,26 +450,31 @@
                     android:layout_height="40dp"
                     android:layout_alignStart="@+id/textView31"
                     android:layout_alignTop="@+id/marca_vehiculo"
+                    android:paddingTop="10dp"
                     android:text="@string/marca"
-                    android:textColor="@android:color/black"/>
+                    android:textColor="@android:color/black" />
 
                 <Button
                     android:id="@+id/seleccionarEncuentro"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/longitud_lugar_encuentro"
+                    android:layout_width="300dp"
+                    android:layout_height="40dp"
+                    android:layout_alignStart="@+id/seleccionarDestino"
+                    android:layout_below="@+id/textViewDD"
                     android:layout_marginTop="20dp"
-                    android:layout_toEndOf="@+id/textViewDD3"
-                    android:text="Encuentro" />
+                    android:background="@drawable/tercer_button_style"
+                    android:text="Seleccionar encuentro"
+                    android:textAllCaps="false" />
 
                 <Button
                     android:id="@+id/seleccionarDestino"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@+id/latitud_lugar_destino"
-                    android:layout_marginBottom="17dp"
-                    android:layout_toEndOf="@+id/textViewDD"
-                    android:text="Destino" />
+                    android:layout_width="300dp"
+                    android:layout_height="40dp"
+                    android:layout_alignEnd="@+id/descripcion_lugar_destino"
+                    android:layout_below="@+id/textViewDD2"
+                    android:layout_marginTop="12dp"
+                    android:text="Seleccionar destino"
+                    android:textAllCaps="false"
+                    android:background="@drawable/tercer_button_style"/>
 
                 <TextView
                     android:id="@+id/textView30"
@@ -540,8 +482,9 @@
                     android:layout_height="40dp"
                     android:layout_alignStart="@+id/textView29"
                     android:layout_alignTop="@+id/anio_vehiculo"
+                    android:paddingTop="10dp"
                     android:text="@string/anio"
-                    android:textColor="@android:color/black"/>
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/textView31"
@@ -549,8 +492,9 @@
                     android:layout_height="40dp"
                     android:layout_alignStart="@+id/solicitudSpinner"
                     android:layout_alignTop="@+id/color_vehiculo"
+                    android:paddingTop="10dp"
                     android:text="Color"
-                    android:textColor="@android:color/black"/>
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/textView32"
@@ -558,8 +502,9 @@
                     android:layout_height="40dp"
                     android:layout_alignStart="@+id/textView31"
                     android:layout_alignTop="@+id/numero_placas"
+                    android:paddingTop="10dp"
                     android:text="@string/placas"
-                    android:textColor="@android:color/black"/>
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/textView33"
@@ -567,8 +512,9 @@
                     android:layout_height="40dp"
                     android:layout_alignStart="@+id/textView32"
                     android:layout_alignTop="@+id/tipo_vehiculo"
+                    android:paddingTop="10dp"
                     android:text="@string/tipo"
-                    android:textColor="@android:color/black"/>
+                    android:textColor="@android:color/black" />
             </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
