--- a/Transportaciones_CICESE/app/src/main/res/values/styles.xml
+++ b/Transportaciones_CICESE/app/src/main/res/values/styles.xml
@@ -5,7 +5,6 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="actionBarStyle">@style/ActionBarStyle</item>
-        <!--item name="colorPrimaryDark">@color/colorPrimaryDark</item-->
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorControlNormal">@color/colorAccent</item>
     </style>
@@ -13,7 +12,7 @@
 
     <style name="ActionBarStyle" parent="Widget.AppCompat.ActionBar">
         <item name="titleTextStyle">@color/colorPrimaryText</item>
-        <item name="background">@color/colorPrimaryText</item>
+        <item name="background">@color/colorAccent</item>
         <item name="colorControlNormal">@color/colorAccent</item>
     </style>
 
