--- a/Transportaciones_CICESE/app/src/main/res/values/colors.xml
+++ b/Transportaciones_CICESE/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#f5f5f5</color>
-    <color name="colorPrimaryDark">#a230a2</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#000000</color>
     <color name="colorPrimaryText">#003e6a</color>
     <color name="ColorActionBarTitle">#000000</color>
